# solitaire

./: .gitignore  Cargo.toml  flake.nix
.cargo/: config.toml
nix/: cards.nix  common.nix  native.nix  svg_playing_cards.nix  web.nix
site/: index.html  style.css
src/: card.rs  deck.rs  drag.rs  main.rs
src/card/: asset_names.rs
