[package]
name = "solitaire"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13"
bevy_svg = { version = "0.13", git = "https://github.com/arnfaldur/bevy_svg.git" }
strum = { version = "0.26", features = ["derive"] }

[features]
default = ["dynamic_linking"]
dynamic_linking = ["bevy/dynamic_linking"]

[profile.dev.package."*"]
opt-level = 3
